--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,6 +12,7 @@ amazon:
   secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] || Rails.application.credentials.dig(:aws, :secret_access_key) %>
   region: <%= ENV['AWS_REGION'] || 'ap-northeast-1' %>
   bucket: <%= ENV['S3_BUCKET'] || 'answers' %>
+  public: true
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
