--- a/.github/workflows/rails-upgrade.yml
+++ b/.github/workflows/rails-upgrade.yml
@@ -43,6 +43,11 @@ jobs:
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y libmysqlclient-dev imagemagick
 
+      - name: Configure bundler for update
+        run: |
+          bundle config set deployment false
+          bundle config set frozen false
+
       - name: Bump Rails requirement
         run: |
           ruby -pi -e "gsub(/gem 'rails'.*$/, \"gem 'rails', '~> 7.1.5', '>= 7.1.5.2'\")" Gemfile
