--- a/.github/workflows/dependency-patch.yml
+++ b/.github/workflows/dependency-patch.yml
@@ -45,6 +45,11 @@ jobs:
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y libmysqlclient-dev imagemagick
 
+      - name: Configure bundler for update
+        run: |
+          bundle config set deployment false
+          bundle config set frozen false
+
       - name: Update dependencies (patch)
         run: bundle update --patch
 
